		- setting of a model on a relationship attribute does not yet work

0.2.1
	- reverted _create_search_params() change. Search paramters stay. Broke
	  too much stuff.
	- added clear_previous_search() to clear the search and reuse the
	  collection

0.2.2
	- bugfix to make VWCollection extend object

0.2.3
	- added function for geo searches

0.2.4
	- added sort()
	- added range()
	- BUG: range() doesn't work with other searches. To be fixed.

0.2.5
	- drew fixed broken delete()

0.2.6
	- ???

0.2.7
	- added delete() and delete_in() to collections

0.2.8
	- added commit() to bulk commit

0.2.9
	- bulk commit now returns the status of each commit
	- fixed date time format to work with bulk commit

0.2.10
	- added callback argument to commit

0.2.11
	- fixed collection calling wrong variable name when a custom index is
	  specfied
	- velociwrapper.__version__ returns the version number of the module now

0.2.12
	- allow _create_source_document() to have a specified date or datetime
	  format
	- fixed to_dict() to return date_time format in true ISO 0000-00-00
	  00:00:00
	- fixed date object creation being turned into datetime

0.2.13
	- fix get_in() to properly use _create_obj_list()
	- get_in() no longer catches exceptions (was returning an empty list)
	- _create_obj_list() filters out docs that returned found: False to
	  prevent an exception when creating the object
	  - this has the effect of returning all found documents from list calls
	  - instead of throwing exceptions / returning empty if a single doc fails
	  - we believe this was the original intended behavior
	- Fixed get_like_this()

0.2.14
	- fixed all() and search() (broken by the last update!)

0.2.15
	- fixed empty list passed to get_in() throwing exception

0.3.0
	- Split the module into multiple files
	- moved module configuration into velociwrapper.config
	- added types that coorespond to types used in ElasticSearch
	- added reindex and create index functionality